fixed list overflow

--- a/src/partials/chatList/chatList.css
+++ b/src/partials/chatList/chatList.css
@@ -1,3 +1,4 @@
 .chatlist {
   flex-grow: 1;
+  overflow: hidden;
 }
